redbasic - set pixel dimensions of conversation top author photo and reply author photos. Hint: if you set these to something like 64px and 32px respectively and reduce the main font-size to say 0.9em, young people won't complain as much about the "ugly dated UI". You see they're used to companies squeezing every pixel out of the screen (more room for advertising) and they don't yet have bad eyes so they can still read teeny stuff. Big fonts and pictures are for old folks that need glasses and make young people complain about the "dated" interface. It's a sure sign that you're going to find old folks here and not many young adults or teens. What's missing at the moment is that if you shrink these photos, the "item-photo-menu" arrow is no longer in the bottom corner of the picture, but might be outside the photo. Will have to see if there's a way to dynamically position this based on the size.

--- a/view/theme/redbasic/css/style.css
+++ b/view/theme/redbasic/css/style.css
@@ -1005,10 +1005,13 @@ footer {
 
 .wall-item-photo {
 	border: none;
+	width: $top_photo !important;
+	height: $top_photo !important;
+
 }
 .comment .wall-item-photo {
-	width: 50px !important; 
-	height: 50px !important;
+	width: $reply_photo !important; 
+	height: $reply_photo !important;
 }
 .wall-item-content {
 	margin-left: 10px;
